# belief-market

./: .gitignore  00_START_HERE.txt  Anchor.toml  BUILD_STATUS.md  DELIVERABLES.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_OPTIONS.md  DEPLOY_FROM_LOCAL.md  DEPLOY_OPTIONS.md  DEPLOY_WAGMI.md  DOCKER_BUILD.sh  DOCKER_DEPLOY.md  DOWNLOAD_INSTRUCTIONS.md  Dockerfile  FINAL_LAUNCH_STEPS.md  FINAL_STATUS.txt  FRONTEND_COMPLETE.md  GITHUB_SETUP.md  GITHUB_VERCEL_SETUP.md  INTEGRATION_EXAMPLES.ts  LAUNCH_LOCALLY.sh  PROJECT_COMPLETION.md  QUICKSTART.md  QUICK_START.md  README.md  README_DEPLOY.md  README_PUSH.txt  SETUP_GUIDE.md  SOLANA_PLAYGROUND.md  START_HERE.txt  WAGMI_DEPLOY.md  WAGMI_DEPLOY.sh  deploy.ps1  deploy.sh  docker-compose.yml  package.json
client/src/: lib.ts  types.ts  utils.ts
frontend/: .env.example  README.md  SETUP_GUIDE.md  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: Header.tsx
frontend/src/pages/: Home.tsx  MarketDetail.tsx  Portfolio.tsx  (+1 more)
migrations/: deploy.ts
programs/belief-market/: Cargo.toml
programs/belief-market/src/: constants.rs  errors.rs  lib.rs
programs/belief-market/src/instructions/: buy_outcome.rs  claim_peg.rs  create_market.rs  emergency_pause.rs  emergency_unpause.rs  initialize_global.rs  initialize_user.rs  mod.rs  redeem_winnings.rs  resolve_market.rs  sell_outcome.rs  view_functions.rs  withdraw_fees.rs
programs/belief-market/src/state/: global_state.rs  market.rs  mod.rs  user_profile.rs
