[package]
name = "belief-market"
version = "0.1.0"
description = "Multi-outcome prediction market platform for Eclipse SVM"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "4"
spl-associated-token-account = "3"
solana-program = "1.18"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "belief_market"
path = "src/lib.rs"
